Closed Bug 1712355 Opened 4 years ago Closed 4 years ago

Modal dialogs are broken with Fission+BFCache

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Fission Milestone M7a
Tracking Status
firefox90 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

Details

Attachments

(1 file)

http://mozilla.pettay.fi/moztests/bfcache_alert.html

I think this is a regression since bug 1711662 wasn't happening at some point - maybe.
Investigating.

Assignee: nobody → bugs

ContentViewers are still marked as being hidden after restore.
This fixes webdriver/tests/forward/user_prompts.py

Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c26cb04cffdc Modal dialogs are broken with Fission+BFCache, r=peterv
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: