Bug 1712355 - Modal dialogs are broken with Fission+BFCache, r=peterv

This fixes webdriver/tests/forward/user_prompts.py

Differential Revision: https://phabricator.services.mozilla.com/D115761